# RAG-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebook/: document.ipynb  pdf_loader.ipynb
